[pom] Rework handing of java agent and add open of java.lang
java.lang was opened by jacoco since jdk 9, its needed with jdk 17+ still, so add it since they removed it.