@@ -25,6 +25,9 @@
     <properties>
         <!-- Automatic Module Name -->
         <module.name>com.github.hazendaz.jmockit.coverage.tests</module.name>
+
+        <!-- Surefire Argline -->
+        <argLine>-javaagent:${settings.localRepository}/com/github/hazendaz/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar=coverage</argLine>
     </properties>
 
     <build>
@@ -38,7 +41,6 @@
                     <excludes>
                         <exclude>**/CoverageTest.class</exclude>
                     </excludes>
-                    <argLine>-javaagent:${settings.localRepository}/com/github/hazendaz/jmockit/jmockit/${project.version}/jmockit-${project.version}.jar=coverage</argLine>
                 </configuration>
             </plugin>
         </plugins>
@@ -65,4 +67,16 @@
             <optional>true</optional>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>jdk17on</id>
+            <activation>
+                <jdk>[17,)</jdk>
+            </activation>
+            <properties>
+                <argLine>-javaagent:${settings.localRepository}/com/github/hazendaz/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar=coverage --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+            </properties>
+        </profile>
+    </profiles>
 </project>
